--- a/src/sass/partials/media_queries.scss
+++ b/src/sass/partials/media_queries.scss
@@ -136,6 +136,12 @@
     }
   }
 
+  .genButton {
+    a {
+      height: 16px;
+    }
+  }
+
   .works {
     .indWorks {
       grid-template-columns: auto auto;
